--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [bdist_rpm]
 release = 1
-packager = Michael Haggerty <mhagger@alum.mit.edu>
+packager = Joaquin Abian <gatoygata2@gmail.com>
 doc_files = ANNOUNCE.txt
             README.txt
             NEWS.txt
@@ -10,6 +10,6 @@ doc_files = ANNOUNCE.txt
             LICENSE.txt
             Gnuplot.html
             doc/
-#requires = _numpy.so, python >= 1.5
-requires = python >= 1.5
+
+requires = python >= 3.8
 
